# XboxBackupManager

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  dev_watcher.py  main.py  pyproject.toml  requirements.txt  title_ids.json  updater.py  version_info.txt
.github/workflows/: build.yml  release.yml  test.yml
database/: MobCatsOGXboxTitleIDs.db  title_database.py  xbox360.json  xbox360_title_database.py  xbox_title_database.py
managers/: directory_manager.py  game_manager.py  table_manager.py  transfer_manager.py
models/: game_info.py
ui/: batch_dlc_import_progress_dialog.py  batch_tu_progress_dialog.py  dlc_info_dialog.py  dlc_list_dialog.py  file_processing_dialog.py  ftp_browser_dialog.py  ftp_settings_dialog.py  icon_manager.py  main_window.py  refactored_main_window.py  single_dlc_install_progress_dialog.py  theme_manager.py  xboxunity_settings_dialog.py  xboxunity_tu_dialog.py
utils/: dlc_utils.py  ftp_client.py  ftp_connection_manager.py  github.py  resource_path.py  settings_manager.py  status_manager.py  system_utils.py  title_update_utils.py  ui_utils.py  xboxunity.py
widgets/: icon_delegate.py
workers/: batch_dlc_import.py  batch_dlc_install_processor.py  batch_tu_processor.py  directory_scanner.py  file_transfer.py  ftp_connection_tester.py  ftp_transfer.py  icon_downloader.py  single_dlc_installer.py  title_update_downloader.py  title_update_fetcher.py  zip_extract.py
